[metadata]
name = impy
# version = attr: impy.__version__
version = 0.2.2
author = Anatoli Fedynitch
maintainer_email = afedynitch@gmail.com
description = Hadronic Interaction Model interface in Python
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/impy-project/impy
download_url = https://pypi.python.org/pypi/impy
classifiers =
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        Intended Audience :: Science/Research
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        License :: OSI Approved :: BSD License
        License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy
    scipy
    pyhepmc
    particletools

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-benchmark

examples =
    boost-histogram
    particle
    matplotlib
    tqdm
    joblib

[flake8]
max-line-length = 90
extend-ignore = E203, F403, E402

[pydocstyle]
convention = numpy
