[metadata]
name = chromo
# version = attr: chromo.__version__
version = 0.4.0
author = Anatoli Fedynitch
maintainer_email = afedynitch@gmail.com
description = Hadronic Interaction Model interface in Python
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/impy-project/chromo
download_url = https://pypi.python.org/pypi/chromo
classifiers =
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        Intended Audience :: Science/Research
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        License :: OSI Approved :: BSD License
        License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.23
    scipy
    particle
    rich

[options.entry_points]
console_scripts =
    chromo = chromo.cli:main

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-benchmark
    pytest-xdist
    pyhepmc>=2.13.2
    uproot
    awkward
    pyyaml
    boost_histogram
    matplotlib

examples =
    boost-histogram
    matplotlib
    tqdm
    joblib

[flake8]
max-line-length = 90
extend-ignore = E203

[pydocstyle]
convention = numpy
